# Maestro-Controller-ROS

./: .gitmodules  readme.md
rc_control/: CMakeLists.txt  package.xml
rc_control/include/: servo_controller.h
rc_control/launch/: remote.launch
rc_control/src/: servo_controller.cpp
servo_control/: CMakeLists.txt  package.xml
servo_control/cfg/: calibration.cfg
servo_control/include/: servo_controller.h
servo_control/launch/: remote.launch  servo_control_node.launch  task2.launch  truck.launch
servo_control/src/: rc_control_node.cpp  servo_controller.cpp  servo_controller_node.cpp
